--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "firebase-admin": "^13.6.0",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11",
     "prisma": "^6.19.0",
     "swagger-ui-express": "^5.0.1"
